--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ attrs==24.2.0
 blinker==1.8.2
 cattrs==24.1.2
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.4.0
 click==8.1.7
 Flask==3.0.3
@@ -9,17 +10,26 @@ Flask-Cors==5.0.0
 flatbuffers==24.3.25
 geographiclib==2.0
 geopy==2.4.1
+h3==4.1.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
+numpy==2.1.2
 openmeteo_requests==1.3.0
 openmeteo_sdk==1.17.0
+pandas==2.2.3
 platformdirs==4.3.6
+pycparser==2.22
+python-dateutil==2.9.0.post0
+pytz==2024.2
 requests==2.32.3
 requests-cache==1.2.1
 retry-requests==2.0.0
+setuptools==75.2.0
 six==1.16.0
+timezonefinder==6.5.4
+tzdata==2024.2
 url-normalize==1.4.3
 urllib3==2.2.3
 Werkzeug==3.0.4
