--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Flask-Cors==5.0.0
 flatbuffers==24.3.25
 geographiclib==2.0
 geopy==2.4.1
+gunicorn==23.0.0
 h3==4.1.1
 idna==3.10
 itsdangerous==2.2.0
@@ -18,6 +19,7 @@ MarkupSafe==3.0.2
 numpy==2.1.2
 openmeteo_requests==1.3.0
 openmeteo_sdk==1.17.0
+packaging==24.1
 pandas==2.2.3
 platformdirs==4.3.6
 pycparser==2.22
