--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiosignal==1.3.1
+APScheduler==3.10.4
 attrs==24.2.0
 blinker==1.8.2
 cattrs==24.1.2
@@ -5,26 +9,35 @@ certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
 click==8.1.7
+cryptography==43.0.3
+dnspython==2.7.0
 Flask==3.0.3
 Flask-Cors==5.0.0
 flatbuffers==24.3.25
+frozenlist==1.5.0
 geographiclib==2.0
 geopy==2.4.1
 gunicorn==23.0.0
 h3==4.1.1
+http_ece==1.2.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
+multidict==6.1.0
 numpy==2.1.2
 openmeteo_requests==1.3.0
 openmeteo_sdk==1.17.0
 packaging==24.1
 pandas==2.2.3
 platformdirs==4.3.6
+propcache==0.2.0
+py-vapid==1.9.1
 pycparser==2.22
+pymongo==4.10.1
 python-dateutil==2.9.0.post0
 pytz==2024.2
+pywebpush==2.0.1
 requests==2.32.3
 requests-cache==1.2.1
 retry-requests==2.0.0
@@ -32,6 +45,8 @@ setuptools==75.2.0
 six==1.16.0
 timezonefinder==6.5.4
 tzdata==2024.2
+tzlocal==5.2
 url-normalize==1.4.3
 urllib3==2.2.3
 Werkzeug==3.0.4
+yarl==1.17.0
